--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ a {
     }
     .how__content__inner__box__txt{
         margin:18px 0 0 0;
-        padding:0 10%;
+        padding:0 10% 0 12%;
     }
     .who__content__inner{
         margin:0 5%;
