--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ a {
 }
 .by{
     display: inline;
-    background: rgb(254, 210, 64, 0.7);
+    /* background: rgb(254, 210, 64, 0.7); */
+    background: linear-gradient(rgba(255, 255, 255, 0) 40%, #F7FD9B 70%); 
 }
 .tc{
     text-align: center;
@@ -123,7 +124,7 @@ a {
     margin:-80px 0 0 0;
     text-align: right;
     font-size: 5.0rem;
-    color: rgb(254, 210, 64, 0.3);
+    color: #fed2404d;
     z-index: -1;
 }
 .who__content__inner{
